<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/navMainGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navNotes"
            android:icon="@drawable/icon_notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/navTasks"
            android:icon="@drawable/icon_tasks"
            android:title="@string/menu_tasks" />
    </group>

    <group
        android:id="@+id/navEmployersGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_employer"
            android:title="@string/menu_employers"/>
    </group>

    <group
        android:id="@+id/nav_lowerGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings"/>
    </group>
</menu>