<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBack"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_button"
                android:textColor="@color/white"
                app:backgroundTint="@color/fab"
                app:icon="@drawable/icon_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonApply"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_button"
                android:textColor="@color/white"
                app:icon="@drawable/icon_done"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonBack" />

            <EditText
                android:id="@+id/editTextTaskName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:hint="@string/task_name"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/buttonBack" />

            <TextView
                android:id="@+id/textViewDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:includeFontPadding="false"
                android:text="@string/task_date"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/editTextTaskName"
                app:layout_constraintTop_toBottomOf="@id/editTextTaskName" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDate"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_button"
                android:textColor="@color/white"
                app:icon="@drawable/icon_calendar"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewDateTime"
                app:layout_constraintTop_toBottomOf="@id/editTextTaskName" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/task_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="150dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonDate" />

            <View
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:background="@drawable/background_subtitle_text"
                app:layout_constraintBottom_toBottomOf="@id/editTextTitle"
                app:layout_constraintEnd_toStartOf="@id/editTextTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/editTextTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>